# obsidian_with_llmwiki

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
examples/: parent_workflow.py
skills/llm-wiki/: CLAUDE.md  SKILL.md
src/: index.ts  link-engine.ts  obsidian-client.ts  utils.ts  wiki-ingester.ts  wiki-linter.ts  wiki-manager.ts  wiki-query.ts
src/obsidian_wiki_langgraph/: config.py  graph.py  router.py  state.py  subgraph.py  subgraph_state.py  wiki_nodes.py
src/obsidian_wiki_langgraph/core/: link_engine.py  obsidian_client.py  opencode_runner.py  opencode_workflows.py  utils.py  wiki_ingester.py  wiki_linter.py  wiki_manager.py  wiki_querier.py
src/obsidian_wiki_langgraph/nodes/: wiki_ingest.py  wiki_init.py  wiki_lint.py  wiki_query.py  wiki_status.py
src/obsidian_wiki_langgraph/templates/: claude_md.py  readme_md.py
src/obsidian_wiki_langgraph/tools/: __init__.py  obsidian_tools.py
src/templates/: claude-md.ts  readme-md.ts
